# LocalAgentCLI

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: lint.yml  perf.yml  publish.yml  test.yml  typecheck.yml
docs/: agent-system.md  architecture.md  cli-and-ux.md  commands.md  current-state.md  mcp.md  model-system.md  packaging-and-release.md  remote-providers.md  roadmap.md  safety-and-permissions.md  session-and-config.md  storage-and-logging.md  tool-system.md
localagentcli/: __init__.py  __main__.py
localagentcli/agents/: __init__.py  agent_path.py  chat.py  context_window.py  controller.py  events.py  loop.py  multi_agent.py  planner.py  profiles.py  recovery.py  triage.py  truncation.py
localagentcli/commands/: __init__.py  agent.py  agents.py  config_cmd.py  exit_cmd.py  help.py  hf_token.py  mcp.py  mode.py  models.py  plugin.py  providers.py  router.py  session.py  set_cmd.py  setup_cmd.py  skills.py  status.py
localagentcli/config/: __init__.py  defaults.py  manager.py
localagentcli/features/: __init__.py  registry.py
localagentcli/guardian/: __init__.py  reviewer.py
localagentcli/mcp/: __init__.py  client.py
localagentcli/models/: __init__.py  abstraction.py  detector.py  hf_catalog.py  installer.py  model_info.py  prompt_profile.py  provider_readiness.py  readiness.py  registry.py
localagentcli/models/backends/: __init__.py  base.py  gguf.py  mlx.py  safetensors.py
localagentcli/plugins/: __init__.py  manager.py
localagentcli/providers/: __init__.py  anthropic.py  base.py  keys.py  openai.py  registry.py  rest.py
localagentcli/runtime/: __init__.py  core.py  event_log.py  protocol.py  session_runtime.py
localagentcli/safety/: __init__.py  approval.py  boundary.py  exec_policy.py  layer.py  policy.py  posture.py  rollback.py
localagentcli/session/: __init__.py  compactor.py  context_diff.py  environment_context.py  instructions.py  manager.py  memory.py  migrations.py  replay.py  sqlite_store.py  state.py  store.py  task_context.py  tokens.py  usage.py
localagentcli/session/migrations/: 0001_create_sessions.sql  0002_add_replay_columns.sql  0003_create_session_memories.sql  0004_create_session_active_agents.sql
localagentcli/shell/: __init__.py  animation.py  notifications.py  prompt.py  streaming.py  themes.py  ui.py
localagentcli/skills/: __init__.py  manager.py
localagentcli/storage/: __init__.py  logger.py  manager.py
localagentcli/tools/: __init__.py  adaptation.py  base.py  directory_list.py  exec_process.py  file_read.py  file_search.py  file_write.py  git_commit.py  git_diff.py  git_status.py  patch_apply.py  python_repl.py  registry.py  router.py  schema.py  shell_execute.py  test_execute.py
tests/: conftest.py  test_agent_commands.py  test_agent_controller.py  test_agent_loop.py  test_agent_loop_parallel_tools.py  test_agent_path.py  test_agents_commands.py  test_anthropic_provider.py  test_anthropic_provider_async.py  test_backend_dependencies.py  test_behavior_regression.py  test_chat_controller.py  test_command_router.py  test_commands.py  test_compaction_integration.py  test_config_defaults.py  test_config_manager.py  test_context_compactor.py  test_context_diff.py  test_environment_context.py  test_exec_process.py  test_feature_registry.py  test_generation_profiles.py  test_gguf_backend.py  test_guardian_reviewer.py  test_hf_catalog.py  test_key_manager.py  test_logger.py  test_main.py  test_mcp_runtime.py  test_mlx_backend.py  test_mode_commands.py  test_model_abstraction.py  test_model_abstraction_async_remote.py  test_model_commands.py  test_model_detector.py  test_model_installer.py  test_model_registry.py  test_multi_agent_manager.py  test_openai_provider.py  (+45 more)
tests/cli/: test_packaging_cli.py
tests/e2e/: __init__.py  test_phase17_session_lifecycle.py
tests/integration/: test_packaging_flows.py
tests/perf/: __init__.py  test_perf_baseline.py
