[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localagentcli"
version = "0.1.0"
description = "A production-grade, local-first AI CLI"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "click>=8.0",
    "toml>=0.10",
    "filelock>=3.12",
    "httpx>=0.25",
    "keyring>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "types-toml>=0.10",
]

[project.scripts]
localagent = "localagentcli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["localagentcli"]
omit = ["localagentcli/__init__.py", "localagentcli/*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
