[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "localagentcli"
version = "0.1.0"
description = "A production-grade, local-first AI CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "rainzhang05"}]
keywords = ["ai", "agent", "cli", "llm", "local models"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "prompt-toolkit>=3.0",
    "rich>=13.0",
    "click>=8.0",
    "toml>=0.10",
    "filelock>=3.12",
    "httpx>=0.25",
    "keyring>=24.0",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
mlx = [
    "mlx>=0.5",
    "mlx-lm>=0.5",
]
gguf = [
    "llama-cpp-python>=0.2",
]
torch = [
    "torch>=2.0",
    "transformers>=4.35",
    "safetensors>=0.4",
]
all = [
    "mlx>=0.5",
    "mlx-lm>=0.5",
    "llama-cpp-python>=0.2",
    "torch>=2.0",
    "transformers>=4.35",
    "safetensors>=0.4",
]
dev = [
    "build>=1.2",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.5",
    "twine>=5.1",
    "types-toml>=0.10",
]

[project.urls]
Homepage = "https://github.com/rainzhang05/LocalAgentCLI"
Repository = "https://github.com/rainzhang05/LocalAgentCLI"
Issues = "https://github.com/rainzhang05/LocalAgentCLI/issues"
Changelog = "https://github.com/rainzhang05/LocalAgentCLI/blob/main/CHANGELOG.md"

[project.scripts]
localagentcli = "localagentcli.__main__:main"
localagent = "localagentcli.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--strict-markers -v"

[tool.coverage.run]
source = ["localagentcli"]
omit = ["localagentcli/__init__.py", "localagentcli/*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
